Fix style and for mobile and tablet also add animation to the page

--- a/custom.css
+++ b/custom.css
@@ -508,7 +508,7 @@ footer .portfolio-thumbnail a {
 		color: #96a6b6;
 	}
 	.navbar-default .navbar-nav>li>a{
-		padding: 10px 11px;
+		padding: 10px;
 	}
 	.logo{
 		margin-bottom: 20px;
