--- a/delivery-service/Resources/views/edit-profile-page/profile.html
+++ b/delivery-service/Resources/views/edit-profile-page/profile.html
@@ -509,6 +509,22 @@
                                             <!--Button Save-->
                                             <div class="form-group">
                                                 <div class="col-sm-offset-2 col-sm-10 btn-save-container">
+                                                    <div class="col-md-10 col-xs-12 message-area">
+                                                        <div
+                                                            class="alert alert-success text-center custom-alert-success"
+                                                            role="alert"
+                                                            style="display: none;"
+                                                        >
+                                                           You have successfully change your password.
+                                                        </div>
+                                                        <div
+                                                            class="alert alert-danger text-center custom-alert-danger"
+                                                            role="alert"
+                                                            style="display: none;"
+                                                        >
+                                                            Please fill out all required fields.
+                                                        </div>
+                                                    </div>
                                                     <button type="submit" class="btn btn-default">Save Changes</button>
                                                 </div>
                                             </div>
