show error message when required field are empty

--- a/delivery-service/Resources/views/edit-profile-page/profile.html
+++ b/delivery-service/Resources/views/edit-profile-page/profile.html
@@ -489,19 +489,19 @@
                                             <div class="form-group">
                                                 <label for="inputOldPassword" class="col-sm-3 control-label">Old Password</label>
                                                 <div class="col-sm-8 col-sm-push-1">
-                                                    <input type="text" class="form-control" id="inputOldPassword" placeholder="Old Password" name="oldPassword" required>
+                                                    <input type="password" class="form-control" id="inputOldPassword" placeholder="Old Password" name="oldPassword" required>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="inputNewPassword" class="col-sm-3 control-label">New Password</label>
                                                 <div class="col-sm-8 col-sm-push-1">
-                                                    <input type="text" class="form-control" id="inputNewPassword" placeholder="New Password" name="newPassword" required>
+                                                    <input type="password" class="form-control" id="inputNewPassword" placeholder="New Password" name="newPassword" required>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="inputPasswordChange" class="col-sm-3 control-label">Password (again) </label>
                                                 <div class="col-sm-8 col-sm-push-1">
-                                                    <input type="text" class="form-control" id="inputPasswordAgain" placeholder="Password" name="passwordAgain" required>
+                                                    <input type="password" class="form-control" id="inputPasswordAgain" placeholder="Password" name="passwordAgain" required>
                                                 </div>
                                             </div>
                                             <!--END OF Change Password-->
